change String.isBlank with custom isBlank